# Animation

./: .gitignore  README.md
code/: CMakeLists.txt
code/animation/: animation.h
code/base/: camera.h  field.h  model.cpp  model.h  object3d.h  shader.cpp  texture.cpp  texture.h
code/src/: texture_mapping.cpp  texture_mapping.h
code/test/: Instanced.fs  Instanced.vs  floor.vs  main.cpp
code/unix/: CMakeCache.txt
